[gd_scene load_steps=8 format=3 uid="uid://dtbboy0l7rtom"]

[ext_resource type="Texture2D" uid="uid://bjat2527bckg2" path="res://assets/UI/Single bottle.png" id="1_bw1iy"]
[ext_resource type="Script" path="res://bottle.gd" id="2_f26sk"]
[ext_resource type="PackedScene" uid="uid://yr58sjkja6u3" path="res://bottle_slot.tscn" id="3_o4epv"]
[ext_resource type="Theme" uid="uid://boc335gbi2k65" path="res://crafting_menu.tres" id="4_2jsv7"]
[ext_resource type="Texture2D" uid="uid://bn52ikhcagx62" path="res://assets/UI/Scroll preset (small).png" id="5_1chhm"]
[ext_resource type="Texture2D" uid="uid://crjtnbp13gsj1" path="res://assets/UI/Single bottle remove.png" id="6_lgqir"]
[ext_resource type="Texture2D" uid="uid://dv0je5agif1f1" path="res://assets/UI/aqua regia.png" id="7_fbxmr"]

[node name="craftingBottle" type="Control"]
layout_mode = 3
anchor_right = 0.19
anchor_bottom = 0.358
offset_right = -218.88
offset_bottom = -231.984
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Bottle" type="TextureRect" parent="." node_paths=PackedStringArray("slot1", "slot2")]
layout_mode = 0
offset_left = 45.0
offset_top = 39.0
offset_right = 181.0
offset_bottom = 188.0
texture = ExtResource("1_bw1iy")
script = ExtResource("2_f26sk")
slot1 = NodePath("bottleslot")
slot2 = NodePath("bottleslot2")

[node name="bottleslot" parent="Bottle" instance=ExtResource("3_o4epv")]
layout_mode = 0
anchors_preset = 0
offset_left = 37.0
offset_top = 43.0
offset_right = 102.0
offset_bottom = 96.0

[node name="bottleslot2" parent="Bottle" instance=ExtResource("3_o4epv")]
layout_mode = 0
anchors_preset = 0
offset_left = 30.0
offset_top = 98.0
offset_right = 105.0
offset_bottom = 149.0

[node name="ColorRect" type="ColorRect" parent="Bottle"]
layout_mode = 0
offset_left = 47.0
offset_top = 49.0
offset_right = 90.0
offset_bottom = 92.0
mouse_filter = 2
color = Color(0.439216, 0.219608, 0.756863, 0.258824)

[node name="ColorRect2" type="ColorRect" parent="Bottle"]
layout_mode = 0
offset_left = 47.0
offset_top = 100.0
offset_right = 90.0
offset_bottom = 143.0
mouse_filter = 2
color = Color(0.439216, 0.219608, 0.756863, 0.258824)

[node name="alchemize 1" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 17.0
offset_top = 189.0
offset_right = 111.0
offset_bottom = 233.0
theme = ExtResource("4_2jsv7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Alchemize"
flat = true
icon_alignment = 1

[node name="Background" type="TextureRect" parent="alchemize 1"]
z_index = -1
layout_mode = 0
offset_left = -15.0
offset_top = -6.0
offset_right = 113.0
offset_bottom = 50.0
mouse_filter = 2
texture = ExtResource("5_1chhm")
expand_mode = 1

[node name="aqua regia 1" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 113.0
offset_top = 187.0
offset_right = 215.0
offset_bottom = 231.0
theme = ExtResource("4_2jsv7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Aqua Regia"
icon = ExtResource("6_lgqir")
flat = true
expand_icon = true

[node name="TextureRect" type="TextureRect" parent="aqua regia 1"]
visible = false
layout_mode = 0
offset_right = 242.833
offset_bottom = 94.0
mouse_filter = 2
texture = ExtResource("7_fbxmr")
expand_mode = 3

[node name="Background" type="TextureRect" parent="aqua regia 1"]
z_index = -1
layout_mode = 0
offset_left = -39.0
offset_top = -8.0
offset_right = 139.0
offset_bottom = 56.0
mouse_filter = 2
texture = ExtResource("5_1chhm")

[connection signal="pressed" from="alchemize 1" to="Bottle" method="_on_button_pressed"]
[connection signal="pressed" from="aqua regia 1" to="Bottle" method="_aqua_regia"]
