[gd_scene load_steps=9 format=3 uid="uid://na2fte52arl7"]

[ext_resource type="Script" path="res://craftingMenu.gd" id="1_lvucr"]
[ext_resource type="Texture2D" uid="uid://c5ovw8lsvvugs" path="res://components/ui/elements.png" id="2_dym76"]
[ext_resource type="PackedScene" uid="uid://ckjlfeis4v0m1" path="res://element_source.tscn" id="3_1vmjx"]
[ext_resource type="Texture2D" uid="uid://dmg4al4pf7xbq" path="res://components/ui/bottle.png" id="8_wt5ru"]
[ext_resource type="Script" path="res://bottle.gd" id="10_ppfq8"]
[ext_resource type="Texture2D" uid="uid://cq372pv2f1ifo" path="res://assets/UI elements/alchemize.png" id="11_3qfdm"]
[ext_resource type="PackedScene" uid="uid://yr58sjkja6u3" path="res://bottle_slot.tscn" id="12_p4u2h"]

[sub_resource type="LabelSettings" id="LabelSettings_i3ikx"]
font_color = Color(0, 0, 0, 1)

[node name="craftingMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_right = 40.0
offset_bottom = 39.0
script = ExtResource("1_lvucr")

[node name="Crafting" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 55.0
offset_right = 1088.0
offset_bottom = 580.0
mouse_filter = 2

[node name="Label" type="Label" parent="Crafting"]
layout_mode = 0
offset_left = 506.0
offset_top = 31.0
offset_right = 761.0
offset_bottom = 54.0
text = "CRAFTING MENU"
label_settings = SubResource("LabelSettings_i3ikx")

[node name="element_box" type="TextureRect" parent="Crafting"]
layout_mode = 0
offset_left = 639.0
offset_top = 177.0
offset_right = 926.0
offset_bottom = 456.0
mouse_filter = 2
texture = ExtResource("2_dym76")
expand_mode = 1

[node name="element2" parent="Crafting/element_box" instance=ExtResource("3_1vmjx")]
layout_mode = 0
offset_left = 167.0
offset_top = 164.0
offset_right = 239.0
offset_bottom = 236.0
element = "water"

[node name="element3" parent="Crafting/element_box" instance=ExtResource("3_1vmjx")]
layout_mode = 0
offset_left = 50.0
offset_top = 167.0
offset_right = 122.0
offset_bottom = 239.0
element = "earth"

[node name="element4" parent="Crafting/element_box" instance=ExtResource("3_1vmjx")]
layout_mode = 0
offset_left = 165.0
offset_top = 63.0
offset_right = 237.0
offset_bottom = 135.0
element = "fire"

[node name="element" parent="Crafting/element_box" instance=ExtResource("3_1vmjx")]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.96
anchor_bottom = 0.964
offset_right = -150.52
offset_bottom = -132.956

[node name="bottle" type="TextureRect" parent="Crafting" node_paths=PackedStringArray("slot1", "slot2")]
layout_mode = 0
offset_left = 40.0
offset_top = 31.0
offset_right = 552.0
offset_bottom = 407.0
texture = ExtResource("8_wt5ru")
expand_mode = 1
script = ExtResource("10_ppfq8")
slot1 = NodePath("bottleslot")
slot2 = NodePath("bottleslot2")

[node name="Button" type="Button" parent="Crafting/bottle"]
layout_mode = 0
offset_left = 127.0
offset_top = 347.0
offset_right = 311.0
offset_bottom = 439.0

[node name="TextureRect" type="TextureRect" parent="Crafting/bottle/Button"]
layout_mode = 0
offset_right = 187.0
offset_bottom = 94.0
mouse_filter = 2
texture = ExtResource("11_3qfdm")
expand_mode = 3

[node name="bottleslot" parent="Crafting/bottle" instance=ExtResource("12_p4u2h")]
layout_mode = 0
offset_left = 168.0
offset_top = 61.0
offset_right = 273.0
offset_bottom = 159.0

[node name="bottleslot2" parent="Crafting/bottle" instance=ExtResource("12_p4u2h")]
layout_mode = 0
offset_left = 171.0
offset_top = 196.0
offset_right = 276.0
offset_bottom = 294.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1020.0
offset_top = 69.0
offset_right = 1065.0
offset_bottom = 116.0
text = "X"

[connection signal="pressed" from="Crafting/bottle/Button" to="Crafting/bottle" method="_on_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_hide"]
